@@ -45,6 +45,7 @@ enum {
     GUI_PREPARE,
     GUI_REDRAW,
     GUI_RUN_COMMAND,
+    GUI_RUN_MESSAGE,
     GUI_SETUP_VIDEO_WINDOW,
     GUI_SET_AFILTER,
     GUI_SET_AUDIO,
